UPDATE Board,File 다중이미지 처리를 위한 setting 부분 추가 및 swagger 보완

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,19 @@
 spring:
   profiles:
     active: dev
+  servlet:
+    multipart:
+      maxFileSize: 10MB
+      maxRequestSize: 20MB
+
+logging:
+  level:
+    org:
+      apache:
+        coyote:
+          http11: debug
+upload:
+  path: /Users/kathylee/Desktop
 
 springdoc:
   version: '@project.version@'
