--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ logging:
         coyote:
           http11: debug
 upload:
-  path: /Users/kathylee/Desktop
+  path: /
 
 springdoc:
   version: '@project.version@'
